--- a/ImageTool/ImageTool.vcxproj
+++ b/ImageTool/ImageTool.vcxproj
@@ -185,6 +185,7 @@
   <ItemGroup>
     <ClInclude Include="CBrightnessContrastDlg.h" />
     <ClInclude Include="CFileNewDlg.h" />
+    <ClInclude Include="CGammaCorrectionDlg.h" />
     <ClInclude Include="ChildFrm.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="ImageTool.h" />
@@ -205,6 +206,7 @@
   <ItemGroup>
     <ClCompile Include="CBrightnessContrastDlg.cpp" />
     <ClCompile Include="CFileNewDlg.cpp" />
+    <ClCompile Include="CGammaCorrectionDlg.cpp" />
     <ClCompile Include="ChildFrm.cpp" />
     <ClCompile Include="ImageTool.cpp" />
     <ClCompile Include="ImageToolDoc.cpp" />
