--- a/ImageTool/ImageTool.vcxproj
+++ b/ImageTool/ImageTool.vcxproj
@@ -187,6 +187,7 @@
     <ClInclude Include="CFileNewDlg.h" />
     <ClInclude Include="CGammaCorrectionDlg.h" />
     <ClInclude Include="ChildFrm.h" />
+    <ClInclude Include="CHistogramDlg.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="ImageTool.h" />
     <ClInclude Include="ImageToolDoc.h" />
@@ -208,6 +209,7 @@
     <ClCompile Include="CFileNewDlg.cpp" />
     <ClCompile Include="CGammaCorrectionDlg.cpp" />
     <ClCompile Include="ChildFrm.cpp" />
+    <ClCompile Include="CHistogramDlg.cpp" />
     <ClCompile Include="ImageTool.cpp" />
     <ClCompile Include="ImageToolDoc.cpp" />
     <ClCompile Include="ImageToolView.cpp" />
