--- a/ImageTool/ImageTool.vcxproj
+++ b/ImageTool/ImageTool.vcxproj
@@ -203,6 +203,7 @@
     <ClInclude Include="IppImage\IppDib.h" />
     <ClInclude Include="IppImage\IppEnhance.h" />
     <ClInclude Include="IppImage\IppFilter.h" />
+    <ClInclude Include="IppImage\IppFourier.h" />
     <ClInclude Include="IppImage\IppGeometry.h" />
     <ClInclude Include="IppImage\IppImage.h" />
     <ClInclude Include="IppImage\RGBBYTE.h" />
@@ -233,6 +234,7 @@
     <ClCompile Include="IppImage\IppDib.cpp" />
     <ClCompile Include="IppImage\IppEnhance.cpp" />
     <ClCompile Include="IppImage\IppFilter.cpp" />
+    <ClCompile Include="IppImage\IppFourier.cpp" />
     <ClCompile Include="IppImage\IppGeometry.cpp" />
     <ClCompile Include="IppImage\stdafx.cpp" />
     <ClCompile Include="MainFrm.cpp" />
