--- a/ImageTool/ImageTool.vcxproj.filters
+++ b/ImageTool/ImageTool.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClInclude Include="IppImage\IppFourier.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="CFreqFilteringDlg.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ImageTool.cpp">
@@ -180,6 +183,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="IppImage\IppFourier.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CFreqFilteringDlg.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
