--- a/ImageTool/ImageTool.vcxproj
+++ b/ImageTool/ImageTool.vcxproj
@@ -192,6 +192,7 @@
     <ClInclude Include="CFreqFilteringDlg.h" />
     <ClInclude Include="CGammaCorrectionDlg.h" />
     <ClInclude Include="CGaussianDlg.h" />
+    <ClInclude Include="CHarrisCornerDlg.h" />
     <ClInclude Include="ChildFrm.h" />
     <ClInclude Include="CHistogramDlg.h" />
     <ClInclude Include="CResizeDlg.h" />
@@ -227,6 +228,7 @@
     <ClCompile Include="CFreqFilteringDlg.cpp" />
     <ClCompile Include="CGammaCorrectionDlg.cpp" />
     <ClCompile Include="CGaussianDlg.cpp" />
+    <ClCompile Include="CHarrisCornerDlg.cpp" />
     <ClCompile Include="ChildFrm.cpp" />
     <ClCompile Include="CHistogramDlg.cpp" />
     <ClCompile Include="CResizeDlg.cpp" />
