--- a/DLLTool/DLLTool.vcxproj
+++ b/DLLTool/DLLTool.vcxproj
@@ -183,6 +183,8 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CClientSocket.cpp" />
+    <ClCompile Include="CListenSocket.cpp" />
     <ClCompile Include="DetectDlg.cpp" />
     <ClCompile Include="dllmain.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</CompileAsManaged>
@@ -212,6 +214,8 @@
     <None Include="res\DLLTool.rc2" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CClientSocket.h" />
+    <ClInclude Include="CListenSocket.h" />
     <ClInclude Include="DetectDlg.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
