--- a/ImageTool/ImageTool.vcxproj.filters
+++ b/ImageTool/ImageTool.vcxproj.filters
@@ -123,6 +123,9 @@
     <ClInclude Include="LineControl.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="CChatServerDlg.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ImageTool.cpp">
@@ -216,6 +219,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="LineControl.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CChatServerDlg.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
